--- a/Languages/Japanese/Frontend/commands.json
+++ b/Languages/Japanese/Frontend/commands.json
@@ -5,22 +5,22 @@
     "command_premium_required": "おっと、このコミュニティーにはプレミアム版がないのでこの操作を実行できません。",
     "command_ratelimited_spam": "ちょっと落ち着いてください！短時間に送信しすぎです。しばらくしてから実行してください。",
     "command_ratelimited_notice": "ちょっと落ち着いてください！短時間にこの操作を実行しすぎです。しばらくしてから実行してください：",
-    "command_time_just_now": "just now",
-    "command_time_second": "second",
-    "command_time_seconds": "seconds",
-    "command_time_minute": "minute",
-    "command_time_minutes": "minutes",
-    "command_time_hour": "hour",
-    "command_time_hours": "hours",
-    "command_time_day": "day",
-    "command_time_days": "days",
-    "command_time_week": "week",
-    "command_time_weeks": "weeks",
-    "command_time_month": "month",
-    "command_time_months": "months",
-    "command_time_year": "year",
-    "command_time_years": "years",
-    "command_time_ago": "ago",
+    "command_time_just_now": "たった今",
+    "command_time_second": "秒",
+    "command_time_seconds": "秒",
+    "command_time_minute": "分",
+    "command_time_minutes": "分",
+    "command_time_hour": "時間",
+    "command_time_hours": "時間",
+    "command_time_day": "日",
+    "command_time_days": "日",
+    "command_time_week": "週間",
+    "command_time_weeks": "週間",
+    "command_time_month": "月",
+    "command_time_months": "月",
+    "command_time_year": "年",
+    "command_time_years": "年",
+    "command_time_ago": "前",
     "command_permission_create_instant_invite": "CREATE_INSTANT_INVITE",
     "command_permission_kick_members": "KICK_MEMBERS",
     "command_permission_ban_members": "BAN_MEMBERS",
@@ -64,97 +64,97 @@
     "command_permission_manage_events": "MANAGE_EVENTS",
     "command_permission_manage_threads": "MANAGE_THREADS",
     "command_permission_moderate_members": "MODERATE_MEMBERS",
-    "command_error_notice": "Whoops looks like something happened behind the scenes. If this continues to happen contact us.",
-    "verification_account_blacklisted": "Whoops looks like your account is currently blacklisted by our services.",
-    "verification_community_configuration": "Whoops looks like the current configuration for humanization isnt setup.",
-    "verification_community_setup_required": "Whoops looks like the current configuration for humanization isnt setup properly",
-    "verification_account_already_verified": "Whoops looks like your account is currently already verified.",
-    "verification_verification_active": "Whoops looks like you already have an active verification, Please check your direct messages.",
-    "verification_embed_title": "Security Notification",
-    "verification_embed_origin": "Origin",
-    "verification_embed_status": "Status",
-    "verification_embed_status_awaiting": "Awaiting",
-    "verification_embed_notice": "Notice",
-    "verification_embed_notice_description": "This community has asked us to keep them safe from cyber-attacks and to keep their community as human as possible. Please click the button below to complete the verification.",
-    "verification_embed_expires": "Expires in 3 minutes",
-    "verification_embed_promotion": "Innovate your communities with our #1 security.",
-    "verification_embed_button_open": "Open Verification",
-    "verification_ready_description": "Great, verification process has begun in your direct messages. Click the button below to head over to your verification.",
-    "verification_ready_button_open": "Open Message",
-    "verification_error_embed_description": "Whoops looks like your direct messages are closed. Please take a look for a step by step guide on how to open your direct messages.",
-    "serverinfo_embed_general": "General",
-    "serverinfo_embed_general_owner": "Owner",
-    "serverinfo_embed_general_shard": "Shard",
-    "serverinfo_embed_statistics": "Statistics",
-    "serverinfo_embed_statistics_members": "Members",
-    "serverinfo_embed_statistics_channels": "Channels",
-    "serverinfo_embed_statistics_roles": "Roles",
-    "serverinfo_embed_miscellaneous": "Miscellaneous",
-    "serverinfo_embed_miscellaneous_level": "Level",
-    "serverinfo_embed_miscellaneous_boosts": "Boosts",
-    "serverinfo_embed_miscellaneous_joined": "Joined",
-    "serverinfo_embed_debug": "Debug",
-    "serverinfo_embed_version": "Version",
-    "serverinfo_embed_recorded": "Recorded",
-    "whois_client_not_found": "Whoops looks like this discord user could not be found anywhere.",
-    "whois_member_not_found": "Whoops looks like this discord user could not be found anywhere within this discord.",
-    "whois_embed_button_profile": "Blockchain Profile",
-    "whois_embed_button_file_report": "File Report",
-    "whois_embed_general": "General",
-    "whois_embed_general_name": "Name",
-    "whois_embed_general_type": "Type",
-    "whois_embed_general_type_user": "Discord User",
-    "whois_embed_general_type_bot": "Discord Bot",
-    "whois_embed_general_registered": "Registered",
-    "whois_embed_miscellaneous": "Miscellaneous",
-    "whois_embed_miscellaneous_boosted": "Boosted",
-    "whois_embed_miscellaneous_boosted_pending": "Pending",
-    "whois_embed_miscellaneous_joined": "Joined",
-    "whois_embed_permission_watcher": "Permission Watcher",
-    "whois_embed_permission_watcher_stable": "Stable permissions.",
-    "whois_embed_roles": "Roles",
-    "whois_embed_roles_not_found": "No roles detected.",
-    "verifychannel_channel_not_found": "Whoops looks like you didn't provide a channel to configure.",
-    "verifychannel_channel_permission_requirements": "Whoops looks like this channel doesn't have the required permissions.",
-    "verifychannel_channel_set": "Great, human verification channel has been changed successfully.",
-    "verifychannel_embed_description": "Welcome to the community. In order to ensure the safety of others you must verify your account by clicking the button below.",
+    "command_error_notice": "おっと、何らかの問題が発生したようです。このエラーが続くようであればご連絡ください。",
+    "verification_account_blacklisted": "おっと、あなたのアカウントはブラックリストに登録されています。",
+    "verification_community_configuration": "おっと、まだ認証の設定が完了してないようです。",
+    "verification_community_setup_required": "おっと、認証の設定が正しく設定されていないようです。",
+    "verification_account_already_verified": "おっと、既にあなたのアカウントは認証されているようです。",
+    "verification_verification_active": "おっと、既にあなたは認証を始めているようです。ダイレクトメッセージを確認してください。",
+    "verification_embed_title": "セキュリティーの通知",
+    "verification_embed_origin": "元",
+    "verification_embed_status": "ステータス",
+    "verification_embed_status_awaiting": "待機中",
+    "verification_embed_notice": "お知らせ",
+    "verification_embed_notice_description": "このコミュニティーをサイバー攻撃から守り、悪質なボットの侵入を防ぐために下のボタンをクリックして認証をしてください。",
+    "verification_embed_expires": "３分で期限切れ",
+    "verification_embed_promotion": "No.１のセキュリティーでコミュニティーを完全防御しましょう。",
+    "verification_embed_button_open": "認証を開く",
+    "verification_ready_description": "Great!認証プロセスがダイレクトメッセージで開始されました。下のボタンをクリックして認証画面に進んでください。",
+    "verification_ready_button_open": "メッセージを開く",
+    "verification_error_embed_description": "おっと、ダイレクトメッセージが閉鎖されているようです。ダイレクトメッセージの開き方のガイドをご覧ください。",
+    "serverinfo_embed_general": "総合",
+    "serverinfo_embed_general_owner": "オーナー",
+    "serverinfo_embed_general_shard": "シャード",
+    "serverinfo_embed_statistics": "統計",
+    "serverinfo_embed_statistics_members": "メンバー",
+    "serverinfo_embed_statistics_channels": "チャンネル",
+    "serverinfo_embed_statistics_roles": "役職",
+    "serverinfo_embed_miscellaneous": "その他",
+    "serverinfo_embed_miscellaneous_level": "レベル",
+    "serverinfo_embed_miscellaneous_boosts": "ブースト",
+    "serverinfo_embed_miscellaneous_joined": "参加",
+    "serverinfo_embed_debug": "デバッグ",
+    "serverinfo_embed_version": "バージョン",
+    "serverinfo_embed_recorded": "記録",
+    "whois_client_not_found": "おっと、このDiscordユーザーは見つかりませんでした。",
+    "whois_member_not_found": "おっと、このDiscordユーザーはこのDiscordでは見つかりませんでした。",
+    "whois_embed_button_profile": "ブロックチェーンのプロフィール",
+    "whois_embed_button_file_report": "ファイルの報告",
+    "whois_embed_general": "総合",
+    "whois_embed_general_name": "名前",
+    "whois_embed_general_type": "タイプ",
+    "whois_embed_general_type_user": "Discordユーザー",
+    "whois_embed_general_type_bot": "Discordボット",
+    "whois_embed_general_registered": "登録済み",
+    "whois_embed_miscellaneous": "その他",
+    "whois_embed_miscellaneous_boosted": "ブースト",
+    "whois_embed_miscellaneous_boosted_pending": "保留中",
+    "whois_embed_miscellaneous_joined": "参加済み",
+    "whois_embed_permission_watcher": "権限の監視",
+    "whois_embed_permission_watcher_stable": "安定した権限",
+    "whois_embed_roles": "役職",
+    "whois_embed_roles_not_found": "役職が見つかりませんでした。",
+    "verifychannel_channel_not_found": "おっと、設定するチャンネルも入力してください。",
+    "verifychannel_channel_permission_requirements": "おっと、このチャンネルには必須の権限がないようです。",
+    "verifychannel_channel_set": "Great！認証チャンネルが変更されました。",
+    "verifychannel_embed_description": "コミュニティーへようこそ。ユーザーの安全のため、下のボタンを押して認証を始めてください。",
     "verifychannel_embed_poweredby": "Powered By",
-    "verifychannel_embed_button": "Verify Account",
-    "verifylog_channel_not_found": "Whoops looks like you didn't provide a channel to configure.",
-    "verifylog_webhook_set": "Great, Sensory humanization will now begin to send security notices to channel",
-    "verifymoderation_missing_configuration": "Whoops looks like you didn't provide a proper configuration setting.",
-    "verifymoderation_already_enabled": "Whoops looks like the moderation systems are currently already enabled.",
-    "verifymoderation_already_disabled": "Whoops looks like the moderation systems are currently already disabled.",
-    "verifymoderation_systems_enabled": "Great, humanization moderation systems have been activated successfully.",
-    "verifymoderation_systems_disabled": "Great, humanization moderation systems have been deactivated successfully.",
-    "language_not_found": "Whoops looks like the language you provided is currently not found anywhere in our services.",
-    "language_configuration_set": "Great, Language has been configured successfully.",
-    "verifysettings_embed_channel": "Channel",
-    "verifysettings_embed_status": "Status",
-    "verifysettings_embed_bind": "Bind",
-    "verifysettings_embed_role": "Role",
-    "verifysettings_embed_logs": "Logs",
-    "verifysettings_embed_moderation": "Moderation",
-    "verifysettings_embed_region_lock": "Region Lock",
-    "verifysettings_embed_twofactor": "Two Factor Enforcement",
-    "verifytfa_setting_not_found": "Whoops looks like the configuration you provided could not be found anywhere in our services.",
-    "verifytfa_service_already_enabled": "Whoops looks like community humanization two factor enforcement systems are already inplace.",
-    "verifytfa_service_already_disabled": "Whoops looks like community humanization two factor enforcement systems are already disabled.",
-    "verifytfa_service_enabled": "Great, humanization two factor enforcement systems have been activated successfully.",
-    "verifytfa_service_disabled": "Great, humanization two factor enforcement systems have been deactivated successfully.",
-    "verifyrole_not_found": "Whoops looks like the role you provided could not be found anywhere.",
-    "verifyrole_disabled_role": "Whoops looks like this role you provided cannot be managed by default.",
-    "verifyrole_higher_than_client": "Whoops looks like this role is higher than your current role. As for precautions this role cannot be given.",
-    "verifyrole_higher_than_bot": "Whoops looks like this role can't be managed by default. Select a role that is below my highest role",
-    "verifyrole_forbidden_permission": "Whoops looks like this role can't be managed by default. Forbidden role permission:",
-    "verifyrole_role_set": "Great, Sensory humanization role has been set successully.",
-    "verifyregion_setting_not_found": "Whoops looks like you didn't provide a proper setting configuration.",
-    "verifyregion_method_not_found": "Whoops looks like you didn't provide a proper method configuration.",
-    "verifyregion_region_code": "Whoops looks like you didn't provide a proper region code.",
-    "verifyregion_code_not_found": "Whoops looks like the region code you proper isn't a proper region code.",
-    "verifyregion_already_whitelisted": "Whoops looks like this region is already whitelisted.",
-    "verifyregion_already_blacklisted": "Whoops looks like this region is already blacklisted.",
-    "verifyregion_blacklist_are_currently_enabled": "Whoops looks like there is currently some blacklisted regions. Please disable them to enable region whitelist for full functionality.",
+    "verifychannel_embed_button": "アカウントを認証する",
+    "verifylog_channel_not_found": "おっと、設定するチャンネルも入力してください。",
+    "verifylog_webhook_set": "Great！ Sensoryは只今からセキュリティー通知をチャンネルに送信します。",
+    "verifymoderation_missing_configuration": "おっと、正しいフォーマットで設定してください。",
+    "verifymoderation_already_enabled": "おっと、モデレーションシステムは既にオンになっています。",
+    "verifymoderation_already_disabled": "おっと、モデレーションシステムは既にオフになっています。",
+    "verifymoderation_systems_enabled": "Great！ 認証システムはオンになりました。",
+    "verifymoderation_systems_disabled": "Great！ 認証システムはオフになりました。",
+    "language_not_found": "おっと、その言語はまだこのサービスにはないようです。",
+    "language_configuration_set": "Great！言語が設定されました。",
+    "verifysettings_embed_channel": "チャンネル",
+    "verifysettings_embed_status": "ステータス",
+    "verifysettings_embed_bind": "バインド",
+    "verifysettings_embed_role": "役職",
+    "verifysettings_embed_logs": "ログ",
+    "verifysettings_embed_moderation": "モデレーしょん",
+    "verifysettings_embed_region_lock": "地域ロック",
+    "verifysettings_embed_twofactor": "二要素認証",
+    "verifytfa_setting_not_found": "おっと、その設定はどこにも見つかりませんでした。",
+    "verifytfa_service_already_enabled": "おっと、二要素認証は既にオンになっています",
+    "verifytfa_service_already_disabled": "おっと、二要素認証は既にオフになっています",
+    "verifytfa_service_enabled": "Great！二要素認証がオンになりました。",
+    "verifytfa_service_disabled": "Great！二要素認証がオフになりました。",
+    "verifyrole_not_found": "おっと、その役職は見つかりませんでした。",
+    "verifyrole_disabled_role": "おっと、その役職はデフォルトの設定で管理できないようになっています。",
+    "verifyrole_higher_than_client": "おっと、この役職はあなたの役職よりも高いようです。念のためですが、この役職は追加できません。",
+    "verifyrole_higher_than_bot": "おっと、その役職はデフォルトの設定で管理できないようになっています。私より低い役職を選択してください。",
+    "verifyrole_forbidden_permission": "おっと、その役職はデフォルトの設定で管理できないようになっています。禁止されている役職の権限:",
+    "verifyrole_role_set": "Great！Sensoryの認証の役職が設定されました。",
+    "verifyregion_setting_not_found": "おっと、正しい設定を送信してください。",
+    "verifyregion_method_not_found": "おっと、正しい方式で設定を送信してください。",
+    "verifyregion_region_code": "おっと、地域コードが見つかりませんでした。",
+    "verifyregion_code_not_found": "おっと、 正しい地域コードを入力してください。",
+    "verifyregion_already_whitelisted": "おっと、この地域は既にホワイトリストに登録されています。",
+    "verifyregion_already_blacklisted": "おっと、この地域は既にブラックリストに登録されています。",
+    "verifyregion_blacklist_are_currently_enabled": "おっと、既にブラックリストに登録されている地域があるみたいです。無効化し、ホワイトリストに登録することで機能を利用できます。",
     "verifyregion_whitelist_limited_reached": "Whoops looks like you can only add a max of 2 regions in this category. Want to upgrade? visit our store page:",
     "verifyregion_added": "Great, firewall settings have been updated and have added region:",
     "verify_region_whitelist_not_found": "Whoops looks like this region isn't currently whitelisted",
