--- a/Languages/Japanese/Frontend/commands.json
+++ b/Languages/Japanese/Frontend/commands.json
@@ -155,21 +155,21 @@
     "verifyregion_already_whitelisted": "おっと、この地域は既にホワイトリストに登録されています。",
     "verifyregion_already_blacklisted": "おっと、この地域は既にブラックリストに登録されています。",
     "verifyregion_blacklist_are_currently_enabled": "おっと、既にブラックリストに登録されている地域があるみたいです。無効化し、ホワイトリストに登録することで機能を利用できます。",
-    "verifyregion_whitelist_limited_reached": "Whoops looks like you can only add a max of 2 regions in this category. Want to upgrade? visit our store page:",
-    "verifyregion_added": "Great, firewall settings have been updated and have added region:",
-    "verify_region_whitelist_not_found": "Whoops looks like this region isn't currently whitelisted",
-    "verify_region_blacklist_not_found": "Whoops looks like this region isn't currently blacklisted",
-    "verifyregion_removed": "Great, firewall settings have been updated and have removed region:",
-    "verifyregion_region_lock_deactivated": "Whoops looks like the region lock is currently not setup. Add a region to enable the firewall.",
-    "verifyregion_region_lock_active": "Whoops looks like this community currently has region lock enable. In order to process blacklisted regions you must remove the current whitelisted regions for this to function",
-    "verifyregion_embed_allowed_regions": "Allowed Regions",
-    "verifyregion_embed_blocked_regions": "Blocked Regions",
-    "verifyregion_not_enough_blacklists": "Whoops looks like there isn't any blocked regions available.",
-    "help_embed_bot_documentation": "Documentation",
-    "help_embed_documentation": "Please ensure that you will only require support if needed if you are simply looking for help with setting up the bot you can visit our documentation:",
+    "verifyregion_whitelist_limited_reached": "おっと、このカテゴリーには最高でも２つの地域しか追加できません。アップグレードしたいですか? こちらへどうぞ:",
+    "verifyregion_added": "Great！ファイヤーウォールの設定が更新され、対象の地域を追加しました：",
+    "verify_region_whitelist_not_found": "おっと、この地域はホワイトリストに登録されていません。",
+    "verify_region_blacklist_not_found": "おっと、この地域はブラックリストに登録されていません。",
+    "verifyregion_removed": "Great！ファイヤーウォールの設定が更新され、対象の地域を削除しました：",
+    "verifyregion_region_lock_deactivated": "おっと、地域ロックはまだ設定されていません。ファイヤーウォールを設定するには対象の地域を追加してください。",
+    "verifyregion_region_lock_active": "おっと、このコミュニティーは地域ロックが設定されているようです。ブラックリストに登録された地域を処理するにはまずホワイトリストから削除してください。",
+    "verifyregion_embed_allowed_regions": "許可された地域",
+    "verifyregion_embed_blocked_regions": "ブロックされた地域",
+    "verifyregion_not_enough_blacklists": "おっと、ブロックされた地域はないようです。",
+    "help_embed_bot_documentation": "ドキュメンテーション",
+    "help_embed_documentation": "必要な時のみサポートへお越しください。ボットの設定については、ドキュメンテーションをご参照ください:",
     "help_embed_website": "Website",
-    "help_embed_website_description": "Sensory's main website is {{website}} any other bot is likely a phishing site which you can report to us here: {{discord}}",
-    "help_embed_general_suport": "General Support",
-    "help_embed_general_support_description": "Support should only be used if your in need of actual help. You can find answers to your questions here: {{about}}. Support Server can be found here: {{discord}}",
-    "help_embed_button": "Support Center"
+    "help_embed_website_description": "Sensoryのウェブサイトは {{website}}です。他のボットはフィッシングサイトである可能性が高いです。もしそうであった場合、こちらへどうぞ: {{discord}}",
+    "help_embed_general_suport": "総合サポート",
+    "help_embed_general_support_description": "助けが必要なときのみサポートをご利用ください。質問に対する答えはこちら: {{about}}。 サポートサーバーはこちら: {{discord}}",
+    "help_embed_button": "サポートセンター"
 }
