--- a/Languages/Japanese/Frontend/login.json
+++ b/Languages/Japanese/Frontend/login.json
@@ -1,7 +1,7 @@
 {
-    "login_error_redirected": "You have been redirected back to the portal. Login with your discord account to continue.",
-    "login_error_expired": "Your login has expired. Login with your discord account to continue.",
-    "login_error_security": "You have been logged out for security reasons. Login with your discord account to continue.",
+    "login_error_redirected": "ポータルサイトにリダイレクトされました。続行するには、Discordアカウントでログインしてください。",
+    "login_error_expired": "ログインの有効期限が切れています。続行するには、Discordアカウントでログインしてください。",
+    "login_error_security": "セキュリティ上の理由により、ログアウトされました。続行するには、Discordアカウントでログインしてください。",
     "login_account_suspended": "Your account is currently suspended from using our services. Want to appeal? Contact us.",
     "login_account_deleted": "Your account is currently not allowed from using our services. Contact us if you wish to reinstate your account.",
     "login_description_one": "Since 2021, we've been securing Discord communities with the best Threat Sampler service on the market.",
