Translate commands.json

--- a/Languages/Japanese/Frontend/commands.json
+++ b/Languages/Japanese/Frontend/commands.json
@@ -21,49 +21,49 @@
     "command_time_year": "年",
     "command_time_years": "年",
     "command_time_ago": "前",
-    "command_permission_create_instant_invite": "CREATE_INSTANT_INVITE",
-    "command_permission_kick_members": "KICK_MEMBERS",
-    "command_permission_ban_members": "BAN_MEMBERS",
-    "command_permission_add_reactions": "ADD_REACTIONS",
-    "command_permission_priority_speaker": "PRIORITY_SPEAKER",
-    "command_permission_stream": "STREAM",
-    "command_permission_view_channel": "VIEW_CHANNEL",
-    "command_permission_send_messages": "SEND_MESSAGES",
-    "command_permission_send_tts_messages": "SEND_TTS_MESSAGES",
-    "command_permission_embed_links": "EMBED_LINKS",
-    "command_permission_attach_files": "ATTACH_FILES",
-    "command_permission_read_message_history": "READ_MESSAGE_HISTORY",
-    "command_permission_use_external_emojis": "USE_EXTERNAL_EMOJIS",
-    "command_permission_view_guild_insights": "VIEW_GUILD_INSIGHTS",
-    "command_permission_connect": "CONNECT",
-    "command_permission_speak": "SPEAK",
-    "command_permission_use_vad": "USE_VAD",
-    "command_permission_change_nickname": "CHANGE_NICKNAME",
-    "command_permission_use_application_commands": "USE_APPLICATION_COMMANDS",
-    "command_permission_request_to_speak": "REQUEST_TO_SPEAK",
+    "command_permission_create_instant_invite": "招待を作成",
+    "command_permission_kick_members": "メンバーをキック",
+    "command_permission_ban_members": "メンバーをBAN",
+    "command_permission_add_reactions": "リアクションを追加",
+    "command_permission_priority_speaker": "優先スピーカー",
+    "command_permission_stream": "WEBカメラ",
+    "command_permission_view_channel": "チャンネルを見る",
+    "command_permission_send_messages": "メッセージを送信",
+    "command_permission_send_tts_messages": "テキスト読み上げメッセージを送信",
+    "command_permission_embed_links": "埋め込みリンク",
+    "command_permission_attach_files": "ファイルを添付",
+    "command_permission_read_message_history": "メッセージ履歴を読む",
+    "command_permission_use_external_emojis": "外部の絵文字を使用する",
+    "command_permission_view_guild_insights": "サーバーインサイトを見る",
+    "command_permission_connect": "接続",
+    "command_permission_speak": "発言",
+    "command_permission_use_vad": "音声検出を使用",
+    "command_permission_change_nickname": "ニックネームを変更",
+    "command_permission_use_application_commands": "アプリコマンドを使う",
+    "command_permission_request_to_speak": "スピーカー参加をリクエスト",
     "command_permission_use_public_threads": "USE_PUBLIC_THREADS",
-    "command_permission_create_public_threads": "CREATE_PUBLIC_THREADS",
+    "command_permission_create_public_threads": "公開スレッドを作成",
     "command_permission_use_private_threads": "USE_PRIVATE_THREADS",
-    "command_permission_create_private_threads": "CREATE_PRIVATE_THREADS",
-    "command_permission_use_external_stickers": "USE_EXTERNAL_STICKERS",
-    "command_permission_send_messages_in_threads": "SEND_MESSAGES_IN_THREADS",
-    "command_permission_start_embedded_activities": "START_EMBEDDED_ACTIVITIES",
-    "command_permission_administrator": "ADMINISTRATOR",
-    "command_permission_manage_channels": "MANAGE_CHANNELS",
-    "command_permission_manage_guild": "MANAGE_GUILD",
-    "command_permission_view_audit_log": "VIEW_AUDIT_LOG",
-    "command_permission_manage_messages": "MANAGE_MESSAGES",
-    "command_permission_mention_everyone": "MENTION_EVERYONE",
-    "command_permission_mute_members": "MUTE_MEMBERS",
-    "command_permission_deafen_members": "DEAFEN_MEMBERS",
-    "command_permission_move_members": "MOVE_MEMBERS",
-    "command_permission_manage_nicknames": "MANAGE_NICKNAMES",
-    "command_permission_manage_roles": "MANAGE_ROLES",
-    "command_permission_manage_webhooks": "MANAGE_WEBHOOKS",
-    "command_permission_manage_emojis_and_stickers": "MANAGE_EMOJIS_AND_STICKERS",
-    "command_permission_manage_events": "MANAGE_EVENTS",
-    "command_permission_manage_threads": "MANAGE_THREADS",
-    "command_permission_moderate_members": "MODERATE_MEMBERS",
+    "command_permission_create_private_threads": "プライベートスレッドを作成",
+    "command_permission_use_external_stickers": "外部のスタンプを使用する",
+    "command_permission_send_messages_in_threads": "スレッドでメッセージを送信",
+    "command_permission_start_embedded_activities": "ユーザーアクティビティ",
+    "command_permission_administrator": "管理者",
+    "command_permission_manage_channels": "チャンネルを管理",
+    "command_permission_manage_guild": "サーバー管理",
+    "command_permission_view_audit_log": "監査ログを表示",
+    "command_permission_manage_messages": "メッセージの管理",
+    "command_permission_mention_everyone": "@everyone、@here、すべてのロールにメンション",
+    "command_permission_mute_members": "メンバーをミュート",
+    "command_permission_deafen_members": "メンバーのスピーカーをミュート",
+    "command_permission_move_members": "メンバーを移動",
+    "command_permission_manage_nicknames": "ニックネームの管理",
+    "command_permission_manage_roles": "ロールの管理",
+    "command_permission_manage_webhooks": "ウェブフックの管理",
+    "command_permission_manage_emojis_and_stickers": "絵文字・スタンプの管理",
+    "command_permission_manage_events": "イベントの管理",
+    "command_permission_manage_threads": "スレッドを管理",
+    "command_permission_moderate_members": "メンバーをタイムアウト",
     "command_error_notice": "おっと、何らかの問題が発生したようです。このエラーが続くようであればご連絡ください。",
     "verification_account_blacklisted": "おっと、あなたのアカウントはブラックリストに登録されています。",
     "verification_community_configuration": "おっと、まだ認証の設定が完了してないようです。",
