Update commands.json(Change exclamation point)

--- a/Languages/Japanese/Frontend/commands.json
+++ b/Languages/Japanese/Frontend/commands.json
@@ -3,8 +3,8 @@
     "command_missing_permisions_client": "おっと、あなたの権限が足りないのでこの操作を実行できません。",
     "command_missing_permissions_bot": "おっと、このボットの権限が足りないのでこの操作を実行できません。",
     "command_premium_required": "おっと、このコミュニティーにはプレミアム版がないのでこの操作を実行できません。",
-    "command_ratelimited_spam": "ちょっと落ち着いてください！短時間に送信しすぎです。しばらくしてから実行してください。",
-    "command_ratelimited_notice": "ちょっと落ち着いてください！短時間にこの操作を実行しすぎです。しばらくしてから実行してください：",
+    "command_ratelimited_spam": "ちょっと落ち着いてください!短時間に送信しすぎです。しばらくしてから実行してください。",
+    "command_ratelimited_notice": "ちょっと落ち着いてください!短時間にこの操作を実行しすぎです。しばらくしてから実行してください：",
     "command_time_just_now": "たった今",
     "command_time_second": "秒",
     "command_time_seconds": "秒",
@@ -116,19 +116,19 @@
     "whois_embed_roles_not_found": "役職が見つかりませんでした。",
     "verifychannel_channel_not_found": "おっと、設定するチャンネルも入力してください。",
     "verifychannel_channel_permission_requirements": "おっと、このチャンネルには必須の権限がないようです。",
-    "verifychannel_channel_set": "Great！認証チャンネルが変更されました。",
+    "verifychannel_channel_set": "Great!認証チャンネルが変更されました。",
     "verifychannel_embed_description": "コミュニティーへようこそ。ユーザーの安全のため、下のボタンを押して認証を始めてください。",
     "verifychannel_embed_poweredby": "Powered By",
     "verifychannel_embed_button": "アカウントを認証する",
     "verifylog_channel_not_found": "おっと、設定するチャンネルも入力してください。",
-    "verifylog_webhook_set": "Great！ Sensoryは只今からセキュリティー通知をチャンネルに送信します。",
+    "verifylog_webhook_set": "Great! Sensoryは只今からセキュリティー通知をチャンネルに送信します。",
     "verifymoderation_missing_configuration": "おっと、正しいフォーマットで設定してください。",
     "verifymoderation_already_enabled": "おっと、モデレーションシステムは既にオンになっています。",
     "verifymoderation_already_disabled": "おっと、モデレーションシステムは既にオフになっています。",
-    "verifymoderation_systems_enabled": "Great！ 認証システムはオンになりました。",
-    "verifymoderation_systems_disabled": "Great！ 認証システムはオフになりました。",
+    "verifymoderation_systems_enabled": "Great! 認証システムはオンになりました。",
+    "verifymoderation_systems_disabled": "Great! 認証システムはオフになりました。",
     "language_not_found": "おっと、その言語はまだこのサービスにはないようです。",
-    "language_configuration_set": "Great！言語が設定されました。",
+    "language_configuration_set": "Great!言語が設定されました。",
     "verifysettings_embed_channel": "チャンネル",
     "verifysettings_embed_status": "ステータス",
     "verifysettings_embed_bind": "バインド",
@@ -140,14 +140,14 @@
     "verifytfa_setting_not_found": "おっと、その設定はどこにも見つかりませんでした。",
     "verifytfa_service_already_enabled": "おっと、二要素認証は既にオンになっています",
     "verifytfa_service_already_disabled": "おっと、二要素認証は既にオフになっています",
-    "verifytfa_service_enabled": "Great！二要素認証がオンになりました。",
-    "verifytfa_service_disabled": "Great！二要素認証がオフになりました。",
+    "verifytfa_service_enabled": "Great!二要素認証がオンになりました。",
+    "verifytfa_service_disabled": "Great!二要素認証がオフになりました。",
     "verifyrole_not_found": "おっと、その役職は見つかりませんでした。",
     "verifyrole_disabled_role": "おっと、その役職はデフォルトの設定で管理できないようになっています。",
     "verifyrole_higher_than_client": "おっと、この役職はあなたの役職よりも高いようです。念のためですが、この役職は追加できません。",
     "verifyrole_higher_than_bot": "おっと、その役職はデフォルトの設定で管理できないようになっています。私より低い役職を選択してください。",
     "verifyrole_forbidden_permission": "おっと、その役職はデフォルトの設定で管理できないようになっています。禁止されている役職の権限:",
-    "verifyrole_role_set": "Great！Sensoryの認証の役職が設定されました。",
+    "verifyrole_role_set": "Great!Sensoryの認証の役職が設定されました。",
     "verifyregion_setting_not_found": "おっと、正しい設定を送信してください。",
     "verifyregion_method_not_found": "おっと、正しい方式で設定を送信してください。",
     "verifyregion_region_code": "おっと、地域コードが見つかりませんでした。",
@@ -156,10 +156,10 @@
     "verifyregion_already_blacklisted": "おっと、この地域は既にブラックリストに登録されています。",
     "verifyregion_blacklist_are_currently_enabled": "おっと、既にブラックリストに登録されている地域があるみたいです。無効化し、ホワイトリストに登録することで機能を利用できます。",
     "verifyregion_whitelist_limited_reached": "おっと、このカテゴリーには最高でも２つの地域しか追加できません。アップグレードしたいですか? こちらへどうぞ:",
-    "verifyregion_added": "Great！ファイヤーウォールの設定が更新され、対象の地域を追加しました：",
+    "verifyregion_added": "Great!ファイヤーウォールの設定が更新され、対象の地域を追加しました：",
     "verify_region_whitelist_not_found": "おっと、この地域はホワイトリストに登録されていません。",
     "verify_region_blacklist_not_found": "おっと、この地域はブラックリストに登録されていません。",
-    "verifyregion_removed": "Great！ファイヤーウォールの設定が更新され、対象の地域を削除しました：",
+    "verifyregion_removed": "Great!ファイヤーウォールの設定が更新され、対象の地域を削除しました：",
     "verifyregion_region_lock_deactivated": "おっと、地域ロックはまだ設定されていません。ファイヤーウォールを設定するには対象の地域を追加してください。",
     "verifyregion_region_lock_active": "おっと、このコミュニティーは地域ロックが設定されているようです。ブラックリストに登録された地域を処理するにはまずホワイトリストから削除してください。",
     "verifyregion_embed_allowed_regions": "許可された地域",
