--- a/Languages/Japanese/API/login.json
+++ b/Languages/Japanese/API/login.json
@@ -1,5 +1,5 @@
 {
     "login_bad_request": "データが不正なため、サービスはあなたのリクエストを拒否しました。",
     "login_request_blocked": "セキュリティ上の理由により、サービスはお客様のリクエストを拒否しました。",
-    "login_internal_error": "サービスでいくつかの問題が発生しています。この問題が続くようでしたら、サポートまでご連絡ください。"
+    "login_internal_error": "サービスで複数の問題が発生しています。繰り返し発生する場合は、サポートまでご連絡ください。"
 }
